# terok-executor

./: .importlinter  AGENTS.md  CHANGELOG.md  Makefile  README.md  REUSE.toml  SECURITY.md  properdocs.yml  pyproject.toml  sonar-project.properties  tach.toml  tach_module_graph.dot
.github/: requirements-ci.txt
.github/workflows/: analysis.yml  ci.yml  docs.yml  inventory.yml  no-git-deps.yml  release.yml  sonar.yml  sonar_pr.yml
docs/: agents.md  credential-proxy.md  index.md  launch-modes.md  security.md  summary.md  vault.md
src/terok_agent/: __init__.py  auth.py  cli.py  commands.py  doctor.py  paths.py  proxy_commands.py  proxy_config.py  registry.py  roster.py  runner.py
src/terok_agent/container/: build.py  cache.py  env.py  inject.py  runner.py
src/terok_agent/credentials/: __init__.py  auth.py  proxy_commands.py  proxy_config.py
src/terok_agent/provider/: __init__.py  agents.py  headless.py  instructions.py  providers.py
src/terok_agent/resources/agents/: claude.yaml
src/terok_agent/resources/scripts/: hilfe  init-ssh-and-repo.sh  ssh-agent-bridge.sh  terok-claude-acp  toad
src/terok_agent/resources/templates/: l1.agent-cli.Dockerfile.template
src/terok_agent/roster/: __init__.py  config_stack.py  loader.py
src/terok_executor/: __init__.py  _tree.py  cli.py  commands.py  config.py  config_schema.py  doctor.py  krun.py  paths.py  preflight.py  sandbox.py  storage.py  vault_addr.py
src/terok_executor/_util/: __init__.py
src/terok_executor/acp/: __init__.py  cache.py  daemon.py  model_options.py  probe.py  proxy.py  roster.py
src/terok_executor/container/: build.py  cache.py  env.py  inject.py  runner.py  sidecar.py
src/terok_executor/credentials/: auth.py  extractors.py  vault_commands.py  vault_config.py
src/terok_executor/integrations/: __init__.py  sandbox.py
src/terok_executor/provider/: __init__.py  agents.py  instructions.py  providers.py  wrappers.py
src/terok_executor/resources/agents/: blablador.yaml  caddy.yaml  claude.yaml  coderabbit.yaml  codex.yaml  copilot.yaml  gh.yaml  glab.yaml  kisski.yaml  opencode.yaml  openrouter.yaml  pi.yaml  sonar.yaml  toad.yaml  vibe.yaml
src/terok_executor/resources/instructions/: default.md
src/terok_executor/resources/providers/: anthropic.yaml  blablador.yaml  coderabbit.yaml  github.yaml  gitlab.yaml  kisski.yaml  mistral.yaml  openai.yaml  openrouter.yaml  sonarcloud.yaml
src/terok_executor/resources/scripts/: hilfe  init-ssh-and-repo.sh  opencode-provider  opencode-toad  pi-env.sh  pi-git-identity.ts  pi-provider  pi-vault-routes.mjs  pi-vault-routes.ts  providers  setup-codex-auth.sh  terok-agents.py  terok-codex-acp  terok-env.sh  terok-native-provider  terok-toad-entry  terok-trust-workspace.py  terok-vibe-acp
src/terok_executor/resources/templates/: agent-wrappers.sh.j2  l0.dev.Dockerfile.template  l0g.guest.Dockerfile.template  l1.agent-cli.Dockerfile.template
src/terok_executor/resources/tmux/: container-tmux.conf
src/terok_executor/roster/: __init__.py  loader.py  schema.py  types.py
tests/: constants.py
tests/containers/: matrix.yml
tests/integration/: __init__.py  conftest.py  helpers.py  test_container_lifecycle.py  test_credential_modes.py  test_vault_route_env.py
tests/unit/: conftest.py  test_acp_probe.py  test_acp_proxy.py  test_acp_roster.py  test_agents.py  test_auth_capture.py  test_authenticator.py  test_build.py  test_cache.py  test_cli.py  test_config.py  test_config_schema.py  test_config_stack.py  test_credential_extractors.py  test_doctor.py  test_egress_projection.py  test_env_builder.py  test_error_surfacing.py  test_handlers.py  test_headless_providers.py  test_image_builder.py  test_init_repo_script.py  test_inject.py  test_instructions.py  test_krun.py  test_lazy_imports.py  test_native_provider.py  test_paths.py  test_preflight.py  test_providers.py  test_providers_command.py  test_proxy_routes.py  test_readiness.py  test_roster.py  test_runner.py  test_setup_flow.py  test_setup_verdict_gate.py  test_sidecar.py  test_smoke.py  test_storage.py  (+2 more)
