[build-system]
requires = ["poetry-core>=1.9.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "terok-executor"
version = "0.0.141a1"
description = "Single-agent task runner for hardened Podman containers"
readme = "README.md"
license = "Apache-2.0"
authors = ["Jiri Vyskocil <jiri@vyskocil.com>"]
keywords = ["podman", "containers", "agent", "ai", "coding-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]

packages = [
  { include = "terok_executor", from = "src" },
]
maintainers = ["Jiri Vyskocil <jiri@vyskocil.com>"]
homepage = "https://terok.ai/"
repository = "https://github.com/terok-ai/terok-executor"
documentation = "https://terok-ai.github.io/terok-executor/"

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
terok-sandbox = {url = "https://github.com/terok-ai/terok-sandbox/releases/download/v0.0.115/terok_sandbox-0.0.115-py3-none-any.whl"}
"ruamel.yaml" = ">=0.18"
Jinja2 = ">=3.1"
tomli-w = ">=1.0"
prompt-toolkit = ">=3.0"
pydantic = ">=2.9"
rich = ">=13.0"
agent-client-protocol = ">=0.7"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=4.0"
ruff = ">=0.15.10"
bandit = ">=1.7"
docstr-coverage = "^2.3.2"
complexipy = ">=5.0"
vulture = ">=2.12"
reuse = "^6.2.0"
tach = "^0.34.1"
mypy = ">=1.13,<2.0"

[tool.poetry.group.test.dependencies]
pytest = ">=9.0.3"
pytest-cov = ">=4.0"
pytest-timeout = ">=2.0"

[tool.poetry.group.docs.dependencies]
properdocs = ">=1.6.7"
mkdocs-material = ">=9.0"
mkdocstrings = {extras = ["python"], version = ">=0.24"}
mkdocs-gen-files = ">=0.5"
mkdocs-literate-nav = ">=0.6"
mkdocs-section-index = ">=0.3"
mkdocs-terok = {url = "https://github.com/terok-ai/mkdocs-terok/releases/download/v0.5.7a1/mkdocs_terok-0.5.7a1-py3-none-any.whl"}

[tool.poetry.scripts]
terok-executor = "terok_executor.cli:main"

[tool.poetry.urls]
Issues = "https://github.com/terok-ai/terok-executor/issues"
Changelog = "https://github.com/terok-ai/terok-executor/releases"
Security = "https://github.com/terok-ai/terok-executor/security/policy"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*", "*Tests"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
  "needs_podman: requires podman on the host",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",      # pycodestyle errors
  "W",      # pycodestyle warnings
  "F",      # pyflakes
  "I",      # isort
  "B",      # flake8-bugbear
  "C4",     # flake8-comprehensions
  "UP",     # pyupgrade
  "SIM",    # flake8-simplify
]
ignore = [
  "E501",   # line too long (handled by formatter)
  "B904",   # raise from in except
  "SIM102", # nested if statements
  "SIM105", # contextlib.suppress vs try/except/pass
  "SIM108", # use ternary operator
  "SIM117", # nested with statements
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["terok_executor"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# Static type checking — see `make typecheck`.
# ``resources/`` is excluded entirely: it holds container-side scripts and
# bundled agent assets that aren't part of the host-side import graph
# (``resources/toad-agents/`` isn't even a valid Python package name).
[tool.mypy]
python_version = "3.12"
files = ["src/terok_executor"]
exclude = "src/terok_executor/resources/"
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true
strict_equality = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
pretty = false
show_error_codes = true

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^v(?P<base>\\d+\\.\\d+\\.\\d+)(?:(?P<stage>a)(?P<revision>\\d+))?$"
style = "pep440"

[tool.poetry-dynamic-versioning.substitution]
folders = [{path = "src"}]
