[build-system]
requires = ["hatchling>=1.27", "hatch-vcs>=0.5"]
build-backend = "hatchling.build"

[project]
name = "terok-executor"
description = "Single-agent task runner for hardened Podman containers"
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name = "Jiri Vyskocil", email = "jiri@vyskocil.com"},
]
maintainers = [
    {name = "Jiri Vyskocil", email = "jiri@vyskocil.com"},
]
keywords = ["podman", "containers", "agent", "ai", "coding-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
requires-python = ">=3.12,<3.15"
dynamic = ["version"]
# Dependency pins follow the policy in AGENTS.md ("Dependency Pinning &
# pyproject.toml Hygiene").  Keep the dependency list comment-free.
dependencies = [
    "terok-sandbox @ git+https://github.com/sliwowitz/terok-sandbox@feat/kernel-keyring-passphrase-tier",
    "terok-util @ https://github.com/terok-ai/terok-util/releases/download/v0.3.1a3/terok_util-0.3.1a3-py3-none-any.whl",
    "ruamel.yaml==0.19.1",
    "Jinja2~=3.1",
    "tomli-w~=1.2",
    "prompt-toolkit~=3.0",
    "pydantic~=2.13",
    "rich~=15.0",
    "agent-client-protocol==0.11.0",
]

[project.urls]
Homepage = "https://terok-ai.github.io/terok-executor/"
Repository = "https://github.com/terok-ai/terok-executor"
Documentation = "https://terok-ai.github.io/terok-executor/"
Issues = "https://github.com/terok-ai/terok-executor/issues"
Changelog = "https://github.com/terok-ai/terok-executor/blob/master/CHANGELOG.md"
Security = "https://github.com/terok-ai/terok-executor/security/policy"

[project.scripts]
terok-executor = "terok_executor.cli:main"

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "ruff>=0.15.20",
    "bandit>=1.7",
    "docstr-coverage>=2.3.2,<3",
    "complexipy>=6.0.1",
    "vulture>=2.12",
    "reuse>=6.2.0,<7",
    "tach>=0.35.0,<0.36",
    "mypy>=2.1.0,<3.0",
    "import-linter>=2.13",
]
test = [
    "pytest>=9.1.1",
    "pytest-cov>=4.0",
    "pytest-timeout>=2.0",
]
docs = [
    "properdocs>=1.6.7",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=0.26",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
    "mkdocs-section-index>=0.3",
    "mkdocs-terok~=0.8.0",
]

[tool.uv]
default-groups = ["dev", "test"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "vcs"
fallback-version = "0.4.0a16"

[tool.hatch.build.targets.wheel]
packages = ["src/terok_executor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*", "*Tests"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
  "needs_podman: requires podman on the host",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",      # pycodestyle errors
  "W",      # pycodestyle warnings
  "F",      # pyflakes
  "I",      # isort
  "B",      # flake8-bugbear
  "C4",     # flake8-comprehensions
  "UP",     # pyupgrade
  "SIM",    # flake8-simplify
]
ignore = [
  "E501",   # line too long (handled by formatter)
  "B904",   # raise from in except
  "SIM102", # nested if statements
  "SIM105", # contextlib.suppress vs try/except/pass
  "SIM108", # use ternary operator
  "SIM117", # nested with statements
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["terok_executor"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# Static type checking -- see `make typecheck`.
# ``resources/`` is excluded entirely: it holds container-side scripts and
# bundled agent assets that aren't part of the host-side import graph
# (``resources/toad-agents/`` isn't even a valid Python package name).
[tool.mypy]
python_version = "3.12"
files = ["src/terok_executor"]
exclude = "src/terok_executor/resources/"
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true
strict_equality = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
pretty = true
show_error_codes = true

# ``resources/`` holds container-side scripts (run inside task containers, not
# part of the host import graph -- the same reason mypy excludes it).  Tests
# exercise them by path-loading (``SourceFileLoader``), which coverage.py can't
# attribute, so they report 0%; omit them rather than chase phantom misses.
[tool.coverage.run]
omit = ["*/terok_executor/resources/*"]
